# cursed_random

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
examples/: test.py
src/cursed_random/: __init__.py
